# discordbot_api

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker_compose.yaml  full_requirements.txt  log_settings.yaml  pyproject.toml  requirements.txt
app/: auth.py  database.py  db.py  log.py  main.py
app/model/: __init__.py  ai.py  auth.py  games.py  main.py  model.py  users.py
app/routes/: main.py
app/routes/ai/: routes.py
app/routes/ai/messages/: functions.py  routes.py  schemas.py
app/routes/ai/usage/: functions.py  routes.py  schemas.py
app/routes/bank/: functions.py  routes.py  schemas.py
app/routes/games/: functions.py  routes.py  schemas.py
app/routes/scores/: functions.py  routes.py  schemas.py
app/routes/users/: functions.py  routes.py  schemas.py
migrations/: env.py
migrations/versions/: 0c30165221e5_create_tables.py
