[project]
name = "discordbot-api"
version = "1.0"
description = "API to handle db calls for github.com/N-Fahey/discordbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "alembic>=1.16.5",
    "fastapi[standard]>=0.117.1",
    "sqlalchemy>=2.0.43",
    "cryptography>=46.0.1"
]
